# Acadamics

Applying/: sop.rtf
DataStructure/Beginner/Problem-3/R1/: CMakeLists.txt  Doc_Data.h  Doc_Info.h  main.cpp
DataStructure/Beginner/Problem-3/R1/Debug/R1.tlog/: CL.read.1.tlog  R1.lastbuildstate  link.read.1.tlog
Object-Oriented-Programming/Train-Project/19L-1135/SFML-OOP-Train/: CMakeLists.txt  README.MD
Object-Oriented-Programming/Train-Project/19L-1135/SFML-OOP-Train/libs/SFML-2.5.1/doc/html/: index.html
Object-Oriented-Programming/Train-Project/19L-1135/SFML-OOP-Train/libs/TGUI-0.8/cmake/: Config.cmake
Object-Oriented-Programming/Train-Project/19L-1135/SFML-OOP-Train/libs/TGUI-0.8/cmake/toolchains/: iOS.toolchain.cmake
Object-Oriented-Programming/Train-Project/19L-1135/SFML-OOP-Train/libs/TGUI-0.8/doc/html/: Animation_8hpp_source.html  BoxLayoutRatios_8hpp_source.html  BoxLayoutRenderer_8hpp_source.html  Button_8hpp_source.html  ChatBoxRenderer_8hpp_source.html  ChatBox_8hpp_source.html  CheckBox_8hpp_source.html  ChildWindow_8hpp_source.html  ClickableWidget_8hpp_source.html  Clipboard_8hpp_source.html  Clipping_8hpp_source.html  ComboBox_8hpp_source.html  Config_8hpp_source.html  Container_8hpp_source.html  CopiedSharedPtr_8hpp_source.html  DataIO_8hpp_source.html  Grid_8hpp_source.html  Group_8hpp_source.html  LabelRenderer_8hpp_source.html  ListBox_8hpp_source.html  ListViewRenderer_8hpp_source.html  ListView_8hpp_source.html  MenuBar_8hpp_source.html  MessageBoxRenderer_8hpp_source.html  MessageBox_8hpp_source.html  ObjectConverter_8hpp_source.html  PanelRenderer_8hpp_source.html  Panel_8hpp_source.html  PictureRenderer_8hpp_source.html  ProgressBarRenderer_8hpp_source.html  ProgressBar_8hpp_source.html  RadioButton_8hpp_source.html  RangeSlider_8hpp_source.html  RendererDefines_8hpp_source.html  ScrollablePanel_8hpp_source.html  Scrollbar_8hpp_source.html  Serializer_8hpp_source.html  Signal_8hpp_source.html  SliderRenderer_8hpp_source.html  SpinButton_8hpp_source.html  (+168 more)
Object-Oriented-Programming/Train-Project/19L-1135/SFML-OOP-Train/src/: Adult.h  Bogie.h  Person.cpp  Person.h  Train.h  kid.cpp
Object-Oriented-Programming/Train-Project/19L-1135/TrainProject/: Adult.cpp  Adult.h  Bogie.cpp  Bogie.h  CMakeLists.txt  Kid.cpp  Kid.h  Person.cpp  Person.h  Train.cpp  Train.h  main.cpp
(+949 files in other folders)
